--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,7 @@ body {
   min-height: 100vh;
   flex-direction: column; }
   .theme--dark body {
-    background-color: #15171A;
+    background-color: #e6f2ff;
     color: #DAE4ED; }
   .theme--light body {
     background-color: #DAE4ED;
