--- a/assets/style.css
+++ b/assets/style.css
@@ -93,7 +93,7 @@ body {
   flex-direction: column; }
   .theme--dark body {
     background-color: #e6f2ff;
-    color: #DAE4ED; }
+    color: #4b759b; }
   .theme--light body {
     background-color: #DAE4ED;
     color: #1E2227; }
