--- a/assets/style.css
+++ b/assets/style.css
@@ -174,7 +174,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: #F24784;
+  color: #5353c6;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
