--- a/assets/style.css
+++ b/assets/style.css
@@ -467,7 +467,7 @@ pre {
     margin-bottom: 1em; }
 
 .tag, .tag-cloud > a {
-  color: #50BD6A;
+  color: #bacdde;
   padding: 0.3em 0.6em;
   border-radius: 0.3em; }
   .theme--dark .tag, .theme--dark .tag-cloud > a {
