--- a/assets/style.css
+++ b/assets/style.css
@@ -288,7 +288,7 @@ pre {
   .site-title, .site-title:visited, .site-title:hover {
     text-decoration: none; }
     .theme--dark .site-title, .theme--dark .site-title:visited, .theme--dark .site-title:hover {
-      color: #4b759b; }
+      color: #5353c6; }
     .theme--light .site-title, .theme--light .site-title:visited, .theme--light .site-title:hover {
       color: #1E2227; }
 
