--- a/assets/style.css
+++ b/assets/style.css
@@ -305,6 +305,8 @@ pre {
   margin-bottom: 1em;
   text-align: left;
   min-height: 72px;
+  background-color: #eef3f7;
+  border-radius: 0.7em;
   font-style: italic; }
   .author-box > .author-avatar {
     float: left;
@@ -312,7 +314,7 @@ pre {
     margin-right: 1em;
     width: 72px;
     height: 72px;
-    border-radius: 0.3em; }
+    border-radius: 0.7em; }
 
 .site-header {
   margin-bottom: 1em; }
