--- a/assets/style.css
+++ b/assets/style.css
@@ -117,6 +117,9 @@ ul, ol, dl, figure,
 p {
   margin: 0.5em 0; }
 
+clean{background-color:black; border-radius: 0.7em;
+}
+
 figure {
   width: 100%;
   margin: 0; }
