--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,7 @@ ul, ol, dl, figure,
   margin-bottom: 10px; }
 
 h7 {
-  background-color:black; 
+  background-color:blue; 
   border-radius: 0.3em;
 }
 
